--- a/index.html
+++ b/index.html
@@ -238,26 +238,33 @@
                 <div class="is-fluid is-mobile m-auto ms-2 is-flex is-flex-direction-column p-5 mt-5 mb-5 paragraph">
                     <div>
                         <!-- Intern project -->
-                        <div class="is-flex is-flex-direction-column">
+                        <div class="is-flex is-flex-direction-column is-align-items-center">
                             <h4 class="mt-5 title is-4 has-text-centered">Internship Projects</h4>
-                            <div class="is-flex is-justify-content-center">
+                            <div class="column is-half is-flex is-flex-direction-column">
                                 <div class="box">
-                                    <h5 class="title is-5 has-text-centered">Poop poop</h5>
-                                    <article>
-                                        <div class="media-left">
+                                    <h5 class="title is-5 has-text-centered">Issue Monitoring System</h5>
+                                    <article class="media is-flex is-flex-direction-row">
+                                        <div class="media-left ">
                                             <!-- Image of project -->
                                             <figure class="image is-128x128 has-background-dark is-flex is-align-items-center">
-                                                <img src="" alt="">
+                                                <img src="pics/Project 2.jpg" alt="Pictures for when there is no available or consented pics to put">
                                             </figure>
                                         </div>
                                         <div class="media">
                                             <div>
                                                 <article class="is-size-6">
-
+                                                    A full-stack web application done in three months (ooo boi), where it helps my industrial supervisor
+                                                    (who is an Engineer) to monitor the progress of parts issue. Initially planned to include automation modules for spreadsheet data extraction
+                                                    and storage, including scheduled reminders and data backup, but soon was dropped as he wants his subordinates to enter data 'manually'. Such a shame tsk tsk
                                                 </article>
                                                 <!-- Tags showing the techs/language used -->
                                                 <div class="mt-3 mb-4">
-
+                                                    <span class="tag is-info mr-2 mb-2">HTML</span>
+                                                    <span class="tag is-info mr-2 mb-2">jQuery/AJAX</span>
+                                                    <span class="tag is-info mr-2 mb-2">PHP</span>
+                                                    <span class="tag is-info mr-2 mb-2">CSS/Boostrap</span>
+                                                    <span class="tag is-info mr-2 mb-2">PostgreSQL</span>
+                                                    <span class="tag is-info mr-2 mb-2">Heroku</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -273,7 +280,7 @@
                                 <!-- FYP Project -->
                                 <div class="box">
                                     <h5 class="title is-5 has-text-centered">Final Year Project: Securing Documents with Lightweight Encryption Algorithm</h5>
-                                    <article class="media is-flex- is-flex-direction-row">
+                                    <article class="media is-flex is-flex-direction-row">
                                         <div class="media-left">
                                             <!-- Image of project -->
                                             <figure class="image is-128x128 has-background-dark is-flex is-align-items-center">
