updated some parts
Updated the internship project part

--- a/index.html
+++ b/index.html
@@ -256,6 +256,13 @@
                                                     A full-stack web application done in three months (ooo boi), where it helps my industrial supervisor
                                                     (who is an Engineer) to monitor the progress of parts issue. Initially planned to include automation modules for spreadsheet data extraction
                                                     and storage, including scheduled reminders and data backup, but soon was dropped as he wants his subordinates to enter data 'manually'. Such a shame tsk tsk
+                                                    
+                                                    <div class="mt-4 message is-info">
+                                                        <div class="message-body">
+                                                            This web application is accessible online but I don't want to risk any breaches so I will only provide the documentation that I <b>tried</b> doing.<br>
+                                                            I figured it would benefit future trainees if they need to handle the system later.
+                                                        </div>
+                                                    </div>
                                                 </article>
                                                 <!-- Tags showing the techs/language used -->
                                                 <div class="mt-3 mb-4">
@@ -266,6 +273,7 @@
                                                     <span class="tag is-info mr-2 mb-2">PostgreSQL</span>
                                                     <span class="tag is-info mr-2 mb-2">Heroku</span>
                                                 </div>
+                                                <button id="modal-internbtn" class="button is-small" data-target="modal-intern" aria-haspopup="true">View Report</button>
                                             </div>
                                         </div>
                                     </article>
