--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                                     
                                                     <div class="mt-4 message is-info">
                                                         <div class="message-body">
-                                                            This web application is accessible online but I don't want to risk any breaches so I will only provide the documentation that I <b>tried</b> doing.<br>
+                                                            This web application is accessible online but I don't want to risk any breaches so I will only provide the documentation that I <b>tried</b> doing once completed.<br>
                                                             I figured it would benefit future trainees if they need to handle the system later.
                                                         </div>
                                                     </div>
@@ -273,7 +273,7 @@
                                                     <span class="tag is-info mr-2 mb-2">PostgreSQL</span>
                                                     <span class="tag is-info mr-2 mb-2">Heroku</span>
                                                 </div>
-                                                <button id="modal-internbtn" class="button is-small" data-target="modal-intern" aria-haspopup="true">View Report</button>
+                                              <!---  <button id="modal-internbtn" class="button is-small" data-target="modal-intern" aria-haspopup="true">View Report</button>-->
                                             </div>
                                         </div>
                                     </article>
@@ -336,7 +336,7 @@
                                                     <span class="tag is-info mr-2 mb-2">PHP</span>
                                                     <span class="tag is-info mr-2 mb-2">MySQL</span>
                                                 </div>
-                                                <button id="modal-borneohomestaybtn" class="button is-small" aria-haspopup="true">View Demo Video</button>
+                                              <!--- <button id="modal-borneohomestaybtn" class="button is-small" aria-haspopup="true">View Demo Video</button>-->
                                             </div>
                                         </div>
                                     </article>
@@ -364,7 +364,7 @@
                                                     <span class="tag is-info mr-2 mb-2">PHP</span>
                                                     <span class="tag is-info mr-2 mb-2">MySQL</span>
                                                 </div>
-                                                <button id="modal-charitybtn" class="button is-small" aria-haspopup="true">View Demo Video</button>
+                                                <!--<button id="modal-charitybtn" class="button is-small" aria-haspopup="true">View Demo Video</button>-->
                                             </div>
                                         </div>
                                     </article>
