--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                         <div class="container content is-size-6 is-justify-content-center paragraph">
                                             <h5>Pure Sciences</h5>
                                             <strong>SM Sains Muar (SAMURA)</strong>
-                                           <br>SPM: 8A 1C
+                                            <br>SPM: 8A 1B
                                         </div>
                                     </div>
                                 </article>
