--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jimie's Portfolio</title>
   </head>
-  <body class="walnut-brown-bg">
+  <body class="bg-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
